--- a/Option1ServiceLayer.Tests/Option1ServiceLayer.Tests.csproj
+++ b/Option1ServiceLayer.Tests/Option1ServiceLayer.Tests.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="Moq" Version="4.16.1" />
         <PackageReference Include="Shouldly" Version="4.0.3" />
@@ -24,6 +26,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Option1ServiceLayer\Option1ServiceLayer.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
